--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4.4.7",
+    "@react-native-community/slider": "^4.4.3",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -25,10 +26,12 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-swiper": "^1.6.0",
