--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4.4.7",
-    "@react-native-community/slider": "^4.4.3",
+    "@react-native-community/slider": "4.4.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -22,10 +22,10 @@
     "expo-font": "^11.4.0",
     "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.6.0",
-    "expo-updates": "^0.18.12",
+    "expo-updates": "~0.18.13",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -33,7 +33,7 @@
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "^4.7.1",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-animated": "^1.5.3",
     "tailwindcss": "^3.3.2",
