--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eas-cli": "^5.2.0",
     "expo": "~49.0.7",
     "expo-checkbox": "~2.4.0",
+    "expo-dev-client": "~2.4.10",
     "expo-font": "^11.4.0",
     "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -34,6 +35,7 @@
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-animated": "^1.5.3",
     "tailwindcss": "^3.3.2",
