--- a/.github/workflows/eas-update-preview.yml
+++ b/.github/workflows/eas-update-preview.yml
@@ -1,13 +1,13 @@
-name: preview
-on: pull_request
+name: update
+on:
+    push:
+        branches:
+            - preview
 
 jobs:
   update:
     name: EAS Update
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
     steps:
       - name: Check for EXPO_TOKEN
         run: |
@@ -34,7 +34,5 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-      - name: Create preview
-        uses: expo/expo-github-action/preview@v8
-        with:
-          command: eas update --platform android --branch production
+      - name: Publish update
+        run: eas update --platform android --branch preview
