--- a/.github/workflows/eas-update-preview.yml
+++ b/.github/workflows/eas-update-preview.yml
@@ -35,4 +35,4 @@ jobs:
         run: npm install
 
       - name: Publish update
-        run: eas update --platform android --branch preview --non-interactive
+        run: eas update --platform android --branch preview --non-interactive --message "Updated Production (main) Branch"
