--- a/.github/workflows/eas-update-production.yml
+++ b/.github/workflows/eas-update-production.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Create preview
         uses: expo/expo-github-action/preview@v8
         with:
-          command: eas update --platform android --branch production --non-interactive
+          command: eas update --platform android --branch production --non-interactive --message "Updated Preview Branch"
