--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.13",
+    "moti": "^0.26.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.4",
