--- a/eas.json
+++ b/eas.json
@@ -4,6 +4,9 @@
   },
   "build": {
     "development": {
+      "ios": {
+        "simulator": true
+      },
       "developmentClient": true,
       "distribution": "internal",
       "channel": "development"
