--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4.4.7",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/slider": "4.4.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.0",
     "eas-cli": "^5.2.0",
     "expo": "~49.0.7",
     "expo-checkbox": "~2.4.0",
     "expo-dev-client": "~2.4.10",
+    "expo-document-picker": "~11.5.4",
     "expo-font": "^11.4.0",
+    "expo-image-picker": "~14.3.2",
     "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.13",
@@ -29,8 +33,11 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-alert-notification": "^0.3.5",
+    "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
@@ -38,8 +45,12 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-super-grid": "^5.0.0",
+    "react-native-svg": "^14.1.0",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-animated": "^1.5.3",
+    "react-native-toast-message": "^2.2.0",
+    "react-redux": "^8.1.3",
     "tailwindcss": "^3.3.2",
     "validator": "^13.11.0"
   },
