--- a/app.json
+++ b/app.json
@@ -2,12 +2,12 @@
   "expo": {
     "name": "Celia",
     "slug": "celia",
-    "version": "1.0.1",
+    "version": "1.0.4",
     "orientation": "portrait",
-    "icon": "./assets/appicon.png",
+    "icon": "./assets/celia-app-icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/appicon.png",
+      "image": "./assets/celia-app-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -16,14 +16,15 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.aimovement.Celia"
+      "bundleIdentifier": "com.aimovement.celia"
     },
     "android": {
+      "googleServicesFile" : "./google-services.json",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/appicon.png",
+        "foregroundImage": "./assets/celia-app-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.vladrhaegar.Celia",
+      "package": "com.vladrhaegar.celia",
       "permissions": [
         "android.permission.RECORD_AUDIO"
       ]
@@ -42,7 +43,8 @@
           "photosPermission": "The app accesses your photos to let you share them with your friends.",
           "cameraPermission": "Allow Celia to access your camera"
         }
-      ]
+      ],
+      "@react-native-google-signin/google-signin"
     ],
     "extra": {
       "eas": {
