--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4.4.7",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/slider": "4.4.2",
+    "@react-native-google-signin/google-signin": "^8.2.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -20,14 +21,18 @@
     "axios": "^1.5.0",
     "eas-cli": "^5.2.0",
     "expo": "~49.0.7",
+    "expo-auth-session": "~3.5.0",
     "expo-checkbox": "~2.4.0",
-    "expo-dev-client": "~2.4.12",
-    "expo-document-picker": "~11.5.4",
+    "expo-crypto": "~10.1.1",
+    "expo-dev-client": "~2.4.10",
+    "expo-document-picker": "~10.1.3",
     "expo-font": "^11.4.0",
-    "expo-image-picker": "~14.3.2",
+    "expo-image-picker": "~12.0.1",
+    "expo-random": "~12.1.1",
     "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.13",
+    "expo-web-browser": "~10.1.0",
     "moti": "^0.26.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -46,7 +51,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-super-grid": "^5.0.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "12.1.1",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-animated": "^1.5.3",
     "react-native-toast-message": "^2.2.0",
