--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ dist/
 web-build/
 
 # Native
+android/
 *.orig.*
 *.jks
 *.p8
@@ -33,3 +34,7 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+# google-services.json
+google-services.json
+celia-bace9-firebase-adminsdk-0krfj-994728da4f.json
