--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,4 @@ yarn-error.*
 *.tsbuildinfo
 
 # google-services.json
-./google-services.json
-./celia-bace9-firebase-adminsdk-0krfj-994728da4f.json
+google-services.json
